# tj294.github.io

./: .gitignore  README.md  index.html  pyproject.toml  styles.css
Device/: device.css  device.html
Docs/: docs.css  docs.html
Service/: service.css  service.html
api/: main.py  settings.py
sighting/: sighting.css  sighting.html
static/: logic.js  style.css
templates/: base.html  homepage.html
wall-music/: wall-music.css  wall-music.html
working/: logic.js  working.html
