[tool.poetry]
name = 'Example project'
version = '0.0.1'
description = 'example project'
authors = ['JafarAstro <tj294@exeter.ac.uk']

[tool.poetry.dependencies]
python = '>=3.8,<3.12'
fastapi = "^0.92.0"
uvicorn = "^0.20.0"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = "poetry.core.masonry.api"