[tool.poetry]
name = 'Example project'
version = '0.0.1'
description = 'example project'
authors = ['JafarAstro <tj294@exeter.ac.uk']

[tool.poetry.dependencies]
python = '>=3.10,<3.12'
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
pydantic = "^1.10.5"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
mandybrot = "^0.0.0"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = "poetry.core.masonry.api"